# mlops-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
src/mlops_mcp/: __init__.py  __main__.py  _types.py  analysis.py  archive.py  cleanup.py  datasets.py  docgen.py  dvc_ops.py  envs.py  experiments.py  fileops.py  git_ops.py  lineage.py  mlflow_ops.py  models.py  pipelines.py  projects.py  router.py  server.py
tests/: conftest.py  test_analysis.py  test_archive.py  test_cleanup.py  test_datasets.py  test_docgen.py  test_dvc_ops.py  test_envs.py  test_experiments.py  test_fileops.py  test_git_ops.py  test_lineage.py  test_mlflow_ops.py  test_models.py  test_pipelines.py  test_projects.py  test_router.py  test_server.py  test_types.py
