[project]
name = "mlops-mcp-server"
version = "0.1.0"
description = "MCP server for common MLOps workflows"
readme = "README.md"
license = "MIT"
keywords = [
    "mlops", "mcp", "model-context-protocol", "mlflow", "dvc",
    "experiment-tracking", "model-registry", "machine-learning", "llm-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

authors = [
    { name = "Anant Patankar", email = "patankar.anant123@gmail.com" }
]

requires-python = ">=3.11"

dependencies = [
    "fastmcp>=3.0.1",
    "gitpython>=3.1.46",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/anant-patankar/mlops-mcp-server"
Source = "https://github.com/anant-patankar/mlops-mcp-server"
"Bug Tracker" = "https://github.com/anant-patankar/mlops-mcp-server/issues"

[project.scripts]
mlops-mcp-server = "mlops_mcp.__main__:main"

[project.optional-dependencies]
mlflow = [
    "mlflow>=1.27.0",
]

models = [
    "joblib>=1.5.3",
    "onnx>=1.21.0",
    "safetensors>=0.7.0",
]

validation = [
    "pandera>=0.29.0",
    "scipy>=1.17.0",
]

templates = [
    "jinja2>=3.1.6",
]

# deepdiff is used in compare_runs with a manual-diff fallback if not installed
compare = [
    "deepdiff>=8.6.1",
]

# nbformat is used in get_notebook_summary with a graceful error if not installed
notebooks = [
    "nbformat>=5.10.4",
]

# pyarrow is required for parquet read/write in analysis.py and datasets.py
parquet = [
    "pyarrow>=23.0.1",
]

dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PEP 735 dependency groups — supported by uv and newer pip; kept alongside
# [project.optional-dependencies] dev above for maximum tool compatibility
[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
mypy_path = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_mcp"]
